    sytnax (" ~~~~") but not when using HTML preformatted syntax
    ("<pre>~~~~</pre>).
  * Convert all Special: pages to use proper camel case, and create redirects
    for the non-camel case versions. Reported by Michael Osipov.

Translation Updates:

  * Updated German translations (axelclk).
  * Updated Russian translations (shar).


0.9.5
=====

Bugfixes:

  * Headings of seven or more levels caused generation of invalid HTML.
    Reported by an anonymous user.
  * Fix a transaction-related issue that could cause XML imports to hang on
    some databases including MS SQL Server.
  * Fix an issue that could cause topic history to display incorrectly with
    MS SQL Server.
  * Update the default footer page's copyright notice to 2011.


0.9.4
=====

Bugfixes:

  * The SERVERNAME magic word was previously implemented incorrectly and has
    been fixed to return only the server URL ("www.example.com") without an
    "http://" prefix. Reported by an anonymous user.
  * Several pages including the Special:History page could generated errors on
    Apache 7.0.x due to an invalid JSTL naming convention used with import
    revisions. Reported by anonymous users.


0.9.3
=====

New Features:

  * Convert parser limits for maximum transclusions, template depth and parser
    iterations to property values to allow more control for sites that need it.

Bugfixes:

  * Fix a potential infinite loop with nested template includes. Inclusions
    are now limited to a maximum of 250 per page.
  * Setting the default file upload properties could cause initialization
    failures in cases where JAMWiki was deployed without the JAMWiki WAR, such
    as on the Liferay server. Reported with proposed fixes by Igor Spasic.
  * The {{DISPLAYTITLE}} magic word should affect page title during editing
    and preview. Reported by an anonymous user.


0.9.2
=====

New Features:

  * Update the LDAP sample in applicationContext-security.xml with an example